--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
             text-align: center;
             margin-top: 50px;
         }
+        .result_alert{
+            color: red;
+        }
     </style>
 </head>
 <body> 
     <h1>Javascript Assignment</h1>
       <h1 class="result"></h1>
+      <h1 class="sub"></h1>
+      <h1 class="result_alert"></h1>
 
 
     <!-- <h1>Add two numbers using JavaScript.</h1>
@@ -51,7 +56,7 @@
     <input type="button" id="btnSum" value="Calculate SUM" onClick="divideTwoNumbers('num1','num2')" />
     <h1 class="divresult"></h1> -->
     <!-- <script src="ans_to_the_que_no_1.js"></script> -->
-    <script src="ans_to_the_que_no_12.js"></script>
+    <script src="ans_to_the_que_no_13.js"></script>
 
 </body>
 </html>
